Fix footer overlap on short pages

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -40,7 +40,7 @@ body {
 
   margin: 0;
   padding: $masthead-height 0 0;
-  padding-bottom: 9em;
+  padding-bottom: 4em;
   font-family: $global-font-family;
   line-height: 1.5;
 
